--- a/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
+++ b/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
@@ -35,9 +35,9 @@
     a { color: inherit; }
 
     .app {
-      max-width: 1100px;
+      max-width: 100%;
       margin: 0 auto;
-      padding: 24px 16px 60px;
+      padding: 24px 24px 60px;
     }
 
     .header {
@@ -92,11 +92,11 @@
 
     .grid {
       display: grid;
-      grid-template-columns: minmax(320px, 420px) 1fr;
+      grid-template-columns: minmax(340px, 420px) minmax(520px, 1fr) minmax(420px, 520px);
       gap: 16px;
       align-items: start;
     }
-    @media (max-width: 980px) {
+    @media (max-width: 1200px) {
       .grid { grid-template-columns: 1fr; }
     }
 
@@ -242,8 +242,11 @@
       min-height: 560px;
       height: 70vh;
       max-height: 70vh;
+      overflow: hidden;
+    }
+    .retrieval-wrap {
+      max-height: 70vh;
       overflow-y: auto;
-      padding-right: 6px;
     }
     .current-input {
       border: 1px solid var(--border);
@@ -281,6 +284,8 @@
       color: var(--text);
       font-size: 13px;
       line-height: 1.5;
+      max-height: 60vh;
+      overflow: visible;
     }
     .current-reco .label {
       font-size: 11px;
@@ -288,6 +293,11 @@
       text-transform: uppercase;
       letter-spacing: .3px;
       margin-bottom: 6px;
+    }
+    .current-reco .panel-body {
+      max-height: calc(60vh - 48px);
+      overflow-y: auto;
+      padding-right: 6px;
     }
     .processing-hint {
       display: none !important;
@@ -297,9 +307,15 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
-      max-height: none;
-      overflow: visible;
+      max-height: 100%;
+      overflow-y: auto;
+      padding-right: 6px;
       flex: 1;
+    }
+    .msg .m-b {
+      max-height: 220px;
+      overflow-y: auto;
+      padding-right: 6px;
     }
     .msg {
       border: 1px solid var(--border);
@@ -321,6 +337,11 @@
       letter-spacing: .3px;
     }
     .msg .m-h .left {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .msg .m-h .right {
       display: flex;
       align-items: center;
       gap: 8px;
@@ -844,37 +865,36 @@
         </div>
         <div class="chat" id="chat"></div>
 
-        <div style="height: 14px;"></div>
+        </div>
+      </div>
 
-        <div class="card" style="box-shadow:none;">
-          <div class="card-h">
-            <h2>Top retrieved manual chunks</h2>
-            <button class="collapse-btn" type="button" data-target="retrievalBody" aria-label="Collapse"></button>
-            <div class="table-controls">
-              <div class="left">
-                <span class="small">Show</span>
-                <input class="range" id="rangeRows" type="range" min="3" max="30" value="10" />
-                <span class="pill" id="rangeLabel">10</span>
-              </div>
+      <!-- RETRIEVAL -->
+      <div class="card">
+        <div class="card-h">
+          <h2>Top retrieved manual chunks</h2>
+          <button class="collapse-btn" type="button" data-target="retrievalBody" aria-label="Collapse"></button>
+          <div class="table-controls">
+            <div class="left">
+              <span class="small">Show</span>
+              <input class="range" id="rangeRows" type="range" min="3" max="30" value="10" />
+              <span class="pill" id="rangeLabel">10</span>
             </div>
           </div>
-          <div class="card-b panel-body" id="retrievalBody" style="padding:0;">
-            <table>
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Score</th>
-                  <th>Source</th>
-                  <th>Pages</th>
-                  <th>Section</th>
-                  <th>Snippet</th>
-                </tr>
-              </thead>
-              <tbody id="resultsBody"></tbody>
-            </table>
-          </div>
         </div>
-
+        <div class="card-b panel-body retrieval-wrap" id="retrievalBody" style="padding:0;">
+          <table>
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Score</th>
+                <th>Source</th>
+                <th>Pages</th>
+                <th>Section</th>
+                <th>Snippet</th>
+              </tr>
+            </thead>
+            <tbody id="resultsBody"></tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -890,6 +910,7 @@
     allClasses: [],  // All available classes
     lastResults: [],
     reviewMessage: null,
+    incidentCounter: 0,
   };
 
   function el(id){ return document.getElementById(id); }
@@ -946,29 +967,71 @@
     body.classList.remove("collapsed");
   }
 
-  function addChatMessage(role, title, body){
+  function archiveCurrentCase(){
+    const inputBody = el("currentInputBody");
+    const recoBody = el("currentRecoBody");
+    const inputHtml = inputBody ? inputBody.innerHTML.trim() : "";
+    const recoHtml = recoBody ? recoBody.innerHTML.trim() : "";
+    if (!inputHtml && !recoHtml) {
+      return;
+    }
+
+    state.incidentCounter += 1;
+    const parts = [];
+    if (inputHtml) {
+      parts.push(`<strong>Incident input</strong><br>${inputHtml}`);
+    }
+    if (recoHtml) {
+      parts.push(`<strong>Recommendation</strong><br>${recoHtml}`);
+    }
+    const wrap = addChatMessage(
+      "assistant",
+      `Previous incident ${state.incidentCounter}`,
+      parts.join("<br><br>"),
+      { prepend: true }
+    );
+    wrap.classList.add("collapsed");
+    const btn = wrap.querySelector(".collapse-btn");
+    if (btn) {
+      btn.classList.add("is-collapsed");
+      btn.setAttribute("aria-label", "Expand");
+    }
+  }
+
+  function addChatMessage(role, title, body, opts){
     const chat = el('chat');
     const wrap = document.createElement('div');
     wrap.className = 'msg';
     wrap.innerHTML = `
       <div class="m-h">
         <div class="left">
-          <button class="collapse-btn" type="button">Collapse</button>
           <span>${title}</span>
         </div>
-        <span class="pill">${role}</span>
+        <div class="right">
+          <button class="collapse-btn" type="button" aria-label="Collapse"></button>
+          <span class="pill">${role}</span>
+        </div>
       </div>
       <div class="m-b" id="msg_${Date.now()}">${body}</div>
     `;
-    chat.appendChild(wrap);
+    const placeTop = opts && opts.prepend;
+    if (placeTop) {
+      chat.prepend(wrap);
+    } else {
+      chat.appendChild(wrap);
+    }
     const btn = wrap.querySelector(".collapse-btn");
     if (btn) {
       btn.onclick = () => {
         wrap.classList.toggle("collapsed");
-        btn.textContent = wrap.classList.contains("collapsed") ? "Expand" : "Collapse";
+        const isCollapsed = wrap.classList.contains("collapsed");
+        btn.classList.toggle("is-collapsed", isCollapsed);
+        btn.setAttribute("aria-label", isCollapsed ? "Expand" : "Collapse");
       };
     }
-    chat.scrollTop = chat.scrollHeight;
+    if (!placeTop) {
+      chat.scrollTop = chat.scrollHeight;
+    }
     return wrap;
   }
 
@@ -1184,6 +1247,7 @@
     let html = "";
     let inOl = false;
     let inUl = false;
+    let olIndex = 0;
 
     const closeLists = () => {
       if (inOl) {
@@ -1221,9 +1285,16 @@
           closeLists();
           html += "<ol>";
           inOl = true;
+          olIndex = 0;
+        }
+        const num = parseInt(olMatch[1], 10);
+        if (num === 1) {
+          olIndex += 1;
+        } else {
+          olIndex = num;
         }
         const itemText = escapeHtml(olMatch[2]).replace(/\*\*(.+?)\*\*/g, "<strong>$1</strong>");
-        html += `<li>${itemText}</li>`;
+        html += `<li value="${olIndex}">${itemText}</li>`;
         return;
       }
 
@@ -1458,6 +1529,7 @@
         imageDescriptions.length && `Images: ${imageDescriptions.join(' | ')}`,
       ].filter(Boolean).join('\n');
 
+      archiveCurrentCase();
       setCurrentInput(userSummary || '');
 
       setCurrentRecommendation("Thinking...", true);
