--- a/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
+++ b/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
@@ -289,6 +289,22 @@
       letter-spacing: .3px;
       margin-bottom: 6px;
     }
+    .current-query {
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      padding: 10px 12px;
+      background: rgba(0,0,0,.18);
+      color: var(--text);
+      font-size: 13px;
+      line-height: 1.5;
+    }
+    .current-query .label {
+      font-size: 11px;
+      color: var(--muted);
+      text-transform: uppercase;
+      letter-spacing: .3px;
+      margin-bottom: 6px;
+    }
     .processing-hint {
       display: none !important;
     }
@@ -835,6 +851,13 @@
           </div>
           <div id="currentInputBody" class="panel-body"></div>
         </div>
+        <div class="current-query" id="currentQuery" style="display:none;">
+          <div class="panel-h">
+            <div class="label">Query</div>
+            <button class="collapse-btn" type="button" data-target="currentQueryBody" aria-label="Collapse"></button>
+          </div>
+          <div id="currentQueryBody" class="panel-body mono"></div>
+        </div>
         <div class="current-reco" id="currentReco" style="display:none;">
           <div class="panel-h">
             <div class="label">Recommendation</div>
@@ -920,6 +943,23 @@
       return;
     }
     const safe = escapeHtml(text || '').replace(/\n/g, '<br>');
+    if (!safe.trim()) {
+      wrap.style.display = 'none';
+      body.innerHTML = '';
+      return;
+    }
+    wrap.style.display = 'block';
+    body.innerHTML = safe;
+    body.classList.remove("collapsed");
+  }
+
+  function setCurrentQuery(text){
+    const wrap = el('currentQuery');
+    const body = el('currentQueryBody');
+    if (!wrap || !body) {
+      return;
+    }
+    const safe = escapeHtml(text || '');
     if (!safe.trim()) {
       wrap.style.display = 'none';
       body.innerHTML = '';
@@ -1488,6 +1528,9 @@
 
       if(data.query_pack && data.query_pack.query){
         el('modelPill').textContent = `query ready`;
+        setCurrentQuery(data.query_pack.query);
+      } else {
+        setCurrentQuery('');
       }
 
       renderResultsTable(data.retrieved || []);
