--- a/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
+++ b/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
@@ -92,7 +92,7 @@
 
     .grid {
       display: grid;
-      grid-template-columns: minmax(340px, 420px) minmax(520px, 1fr) minmax(420px, 520px);
+      grid-template-columns: minmax(280px, 1fr) minmax(360px, 2fr) minmax(320px, 1.2fr);
       gap: 16px;
       align-items: start;
     }
